--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "assert-plus": "0.1.5",
     "node.extend": "1.1.2",
-    "socket.base": "0.0.9",
-    "couchbase": "2.0.5",
-    "q": "1.1.2"
+    "prototype-less": "0.1.1",
+    "socket.base": "0.0.13",
+    "couchbase": "2.0.5"
   },
   "devDependencies": {
     "grunt": "0.4.5",
